# LocalRouter

./: .dockerignore  .gitignore  ARCHITECTURE.md  BUG_FIXES_SUMMARY.md  BUG_REPORT.md  CLAUDE.md  CONFIG_SUBSCRIPTION_GUIDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  EMBEDDINGS_AUTO_ROUTING.md  EMBEDDINGS_TEST_RESULTS.md  ENDPOINTS.md  FEATURE_ADAPTERS.md  LICENSE  OAUTH_BROWSER_IMPLEMENTATION.md  OPENCODE_PROVIDERS_RESEARCH.md  PROGRESS.md  PROVIDER_CONFIG_EXAMPLES.md  PROVIDER_ICONS.md  PROVIDER_LOGOS_GUIDE.md  README.md  ROUTER_REFACTORING_COMPLETE.md  THIRD-PARTY-LICENSES.md  WEB_SERVER_IMPLEMENTATION.md  copy-plan.sh  docker-entrypoint.sh  index.html  package-lock.json  package.json  run-debug-last  run-debug-once  run-debug-watch  run-release  run-release-last  run-website  run-website-once  run-website-watch  tailwind.config.js  test-unified-endpoints.sh  (+4 more)
crates/lr-api-keys/: Cargo.toml
crates/lr-api-keys/src/: keychain.rs  keychain_trait.rs  lib.rs
crates/lr-catalog/: Cargo.toml  build.rs
crates/lr-catalog/buildtools/: codegen.rs  models.rs  scraper.rs
crates/lr-catalog/catalog/: .last_fetch  catalog.rs  modelsdev_raw.json
crates/lr-catalog/src/: lib.rs  matcher.rs  types.rs
crates/lr-clients/: Cargo.toml
crates/lr-clients/src/: lib.rs  manager.rs  token_store.rs
crates/lr-coding-agents/: Cargo.toml
crates/lr-coding-agents/src/: approval.rs  discovery.rs  lib.rs  manager.rs  mcp_tools.rs  types.rs
crates/lr-compression/: Cargo.toml
crates/lr-compression/src/: downloader.rs  engine.rs  lib.rs  model.rs  protection.rs  types.rs
crates/lr-compression/tests/: benchmark.rs
crates/lr-config/: Cargo.toml
crates/lr-config/src/: known_client_tools.rs  lib.rs  migration.rs  paths.rs  storage.rs  types.rs  validation.rs
crates/lr-context/: Cargo.toml
crates/lr-context/benches/: vector_search.rs
crates/lr-context/src/: chunk.rs  fuzzy.rs  hybrid.rs  lib.rs  search.rs  truncate.rs  types.rs
crates/lr-embeddings/: Cargo.toml
crates/lr-embeddings/src/: downloader.rs  lib.rs  model.rs  progress.rs
crates/lr-guardrails/: Cargo.toml
crates/lr-guardrails/src/: compiled_rules.rs  downloader.rs  engine.rs  executor.rs  integration_tests.rs  lib.rs  model_manager.rs  safety_model.rs  source_manager.rs  text_extractor.rs  types.rs
crates/lr-guardrails/tests/: model_inference_tests.rs  source_download_tests.rs
crates/lr-json-repair/: Cargo.toml
crates/lr-json-repair/src/: lib.rs  schema_coerce.rs  streaming.rs  syntax_repair.rs  types.rs
crates/lr-marketplace/: Cargo.toml
crates/lr-marketplace/src/: install.rs  install_popup.rs  lib.rs  registry.rs  skill_sources.rs  tools.rs  types.rs
crates/lr-mcp/: Cargo.toml
crates/lr-mcp-via-llm/: Cargo.toml
crates/lr-mcp-via-llm/src/: gateway_client.rs  integration_tests.rs  lib.rs  manager.rs  orchestrator.rs  orchestrator_stream.rs  session.rs  tests.rs
crates/lr-mcp/src/: lib.rs  manager.rs  oauth.rs  oauth_browser.rs  protocol.rs
crates/lr-memory/: Cargo.toml
crates/lr-memory/src/: cli.rs  compaction.rs  daemon.rs  lib.rs  session_manager.rs  tests.rs  transcript.rs
crates/lr-monitor/: Cargo.toml
crates/lr-monitor/src/: guard.rs  lib.rs  store.rs  summary.rs  types.rs
crates/lr-monitoring/: Cargo.toml
crates/lr-monitoring/src/: graphs.rs  lib.rs  logger.rs  mcp_graphs.rs  mcp_logger.rs  mcp_metrics.rs  metrics.rs
crates/lr-oauth/: Cargo.toml
crates/lr-oauth/src/: browser_callback_server.rs  browser_token_exchange.rs  browser_types.rs  clients.rs  lib.rs
crates/lr-providers/: Cargo.toml
crates/lr-providers/src/: anthropic.rs  cerebras.rs  cohere.rs  deepinfra.rs  factory.rs  gemini.rs  gpt4all.rs  groq.rs  health.rs  health_cache.rs  http_client.rs  jan.rs  key_storage.rs  lib.rs  llamacpp.rs  lmstudio.rs  localai.rs  mistral.rs  ollama.rs  openai.rs  openai_compatible.rs  openrouter.rs  xai.rs  (+3 more)
crates/lr-proxy/: Cargo.toml
crates/lr-responses-sessions/: Cargo.toml
crates/lr-routellm/: Cargo.toml
crates/lr-router/: Cargo.toml
crates/lr-secret-scanner/: Cargo.toml
crates/lr-server/: Cargo.toml
crates/lr-skills/: Cargo.toml
crates/lr-types/: Cargo.toml
crates/lr-utils/: Cargo.toml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.conf.json.orig
src-tauri/buildtools/: codegen.rs  codegen.rs.bak  mod.rs  models.rs  scraper.rs  scraper.rs.bak
src-tauri/capabilities/: default.json  elicitation-form.json  firewall-approval.json  sampling-approval.json
src-tauri/catalog/: .last_fetch  catalog.rs  modelsdev_raw.json  openrouter_raw.json
src-tauri/examples/: check_keychain_entries.rs  test_api_key_keychain.rs  test_api_key_keychain.rs.obsolete  test_keychain.rs.obsolete  test_keychain_no_delete.rs  test_keychain_with_verify.rs  test_keychain_with_verify.rs.obsolete  test_mcp_notifications.rs  test_routellm_gpu.rs
src-tauri/icons/: generate-icons.sh  icon.icns
src-tauri/src/: cli.rs  lib.rs  main.rs
src-tauri/tests/: README.md  access_control_tests.rs  audio_endpoint_tests.rs  cache_integration_test.rs  client_auth_tests.rs  coding_agents_e2e_test.rs  completions_endpoint_tests.rs  debug_null_deserialize.rs  debug_value_id.rs  feature_adapter_integration_tests.rs  integration_config_tests.rs  integration_config_tests.rs.obsolete  mcp_auth_config_tests.rs  mcp_bridge_tests.rs  mcp_client_capabilities_tests.rs  mcp_gateway_integration_tests.rs  mcp_gateway_mock_integration_tests.rs  mcp_gateway_streaming_tests.rs  mcp_integration_tests.rs  mcp_notification_forwarding_tests.rs  mcp_stateless_http_tests.rs  memory_e2e_test.rs  metrics_integration_tests.rs  metrics_storage_tests.rs  metrics_tauri_commands_tests.rs  oauth_browser_integration_tests.rs  openapi_tests.rs  permission_inheritance_tests.rs  provider_integration_tests.rs  provider_tool_calling_tests.rs  route_helpers_tests.rs  routellm_fixes_verification.rs  routellm_improvements_tests.rs  router_routellm_integration_tests.rs  router_strategy_tests.rs  server_stop_cancellation_tests.rs  skills_e2e_test.rs  tauri_serialization_tests.rs  test_deferred_loading_capabilities.rs  tool_calling_tests.rs  (+1 more)
(+1042 files in other folders)
