[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
version = "0.0.13"
edition = "2021"
authors = ["LocalRouter AI Team"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/yourusername/localrouterai"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Crypto & security
bcrypt = "0.16"
ring = "0.17"
base64 = "0.22"
uuid = { version = "1.11", features = ["v4", "serde"] }
hex = "0.4"
machine-uid = "0.5"
sha2 = "0.10"
rand = "0.8"

# Testing
serial_test = "3.2"

# Time & dates
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"
async-stream = "0.3"

# Configuration
config = "0.14"
dirs = "5.0"

# Keyring for secure storage
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native"] }

# OAuth
oauth2 = "4.4"
urlencoding = "2.1"

# Tauri
tauri = { version = "2.2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.2"

# File watching
notify = "6.1"

# Ollama SDK
ollama-rs = "0.2"

# Network interfaces
if-addrs = "0.13"

# Clipboard
arboard = "3.4"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
