[package]
name = "localrouter-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LocalRouter AI - Intelligent AI model routing with OpenAI-compatible API"

[lib]
name = "localrouter_ai"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bcrypt = { workspace = true }
ring = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
keyring = { workspace = true }
oauth2 = { workspace = true }
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-updater = "2.9"
notify = { workspace = true }
if-addrs = { workspace = true }
arboard = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
urlencoding = { workspace = true }
clap = { workspace = true }

# Additional dependencies
futures = "0.3"
futures-util = "0.3"
tokio-tungstenite = "0.21"
parking_lot = "0.12"
dashmap = "6.1"
hex = { workspace = true }
machine-uid = { workspace = true }
ollama-rs = { workspace = true }
jsonschema = "0.18"  # JSON Schema validation for structured outputs
rusqlite = { version = "0.32", features = ["bundled"] }  # SQLite for metrics storage
once_cell = "1.20"  # Lazy static initialization for catalog
image = { version = "0.25", default-features = false, features = ["png"] }  # PNG generation for tray icon graphs
shell-words = "1.1"  # POSIX shell-like command parsing for MCP STDIO

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.2", features = ["axum"] }

# RouteLLM intelligent routing - Candle-based (pure Rust)
tokenizers = "0.22"
hf-hub = { version = "0.3", features = ["tokio"] }
safetensors = "0.4"

# Platform-specific GPU acceleration:
# - macOS: Metal (Apple Silicon GPU)
# - Linux/Windows: CPU by default, CUDA optional (requires CUDA installation)
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8", features = ["metal"] }
candle-nn = { version = "0.8", features = ["metal"] }
candle-transformers = { version = "0.8", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"

[dev-dependencies]
tempfile = "3.8"
serial_test = { workspace = true }
wiremock = "0.6"
regex = "1.10"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
