[package]
name = "localrouter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LocalRouter - Intelligent AI model routing with OpenAI-compatible API"

[lib]
name = "localrouter"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
# Internal crates
lr-types = { workspace = true }
lr-utils = { workspace = true }
lr-catalog = { workspace = true }
lr-config = { workspace = true }
lr-api-keys = { workspace = true }
lr-oauth = { workspace = true }
lr-clients = { workspace = true }
lr-providers = { workspace = true }
lr-routellm = { workspace = true }
lr-monitoring = { workspace = true }
lr-mcp = { workspace = true }
lr-skills = { workspace = true }
lr-router = { workspace = true }
lr-server = { workspace = true }
lr-marketplace = { workspace = true }

# External dependencies still needed by src-tauri (main.rs, ui/, updater/)
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-process = "2"
tauri-plugin-shell = { workspace = true }
tauri-plugin-updater = "2.9"
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }

# These may still be needed by ui/ commands and updater
reqwest = { workspace = true }
image = { workspace = true }
arboard = { workspace = true }
if-addrs = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }
dashmap = { workspace = true }
serde_yaml = { workspace = true }
keyring = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
serial_test = { workspace = true }
wiremock = "0.6"
regex = "1.10"
base64 = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
keyring = { workspace = true }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
