[package]
name = "lr-context"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
vector = ["lr-embeddings"]

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
lr-types = { workspace = true }
lr-embeddings = { workspace = true, optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
lr-embeddings = { workspace = true }
dirs = { workspace = true }

[[bench]]
name = "vector_search"
harness = false
required-features = ["vector"]

[lints]
workspace = true
