[package]
name = "lr-guardrails"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM-based content safety guardrails for requests and responses"

[dependencies]
lr-types = { workspace = true }
lr-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
hf-hub = { workspace = true }
once_cell = { workspace = true }
tauri = { workspace = true, optional = true }

[features]
default = []
tauri-support = ["tauri"]

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
