[package]
name = "lr-json-repair"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON repair and schema coercion for LLM responses"

[dependencies]
jsonrepair = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
