[package]
name = "lr-mcp-via-llm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP via LLM agentic orchestrator for LocalRouter"

[dependencies]
lr-types = { workspace = true }
lr-config = { workspace = true }
lr-providers = { workspace = true }
lr-mcp = { workspace = true }
lr-router = { workspace = true }
lr-memory = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
async-trait = { workspace = true }
chrono = { workspace = true }
lr-monitoring = { workspace = true }
