[package]
name = "lr-monitoring"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Metrics collection and monitoring for LocalRouter"

[dependencies]
lr-types = { workspace = true }
lr-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
rusqlite = { workspace = true }
image = { workspace = true }
anyhow = { workspace = true }
