[package]
name = "lr-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTPS inspection proxy (MITM) for passive LLM traffic monitoring in LocalRouter"

[dependencies]
lr-config = { workspace = true }
lr-utils = { workspace = true }
lr-monitor = { workspace = true }
lr-types = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }

# TLS / certificates
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
rustls = "0.23"
rustls-pki-types = "1"

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
