[package]
name = "lr-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTPS inspection proxy (MITM) for passive LLM traffic monitoring in LocalRouter"

[dependencies]
lr-config = { workspace = true }
lr-utils = { workspace = true }
lr-monitor = { workspace = true }
lr-types = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }

# TLS / certificates — pin the ring provider (already a workspace dep) so the
# proxy's crypto backend is deterministic regardless of workspace feature unions.
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pki-types = "1"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls-native-certs = "0.8"

# HTTP framing for the MITM data-path
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body = "1"
http-body-util = "0.1"
http = "1"
bytes = "1"

[dev-dependencies]
tokio = { workspace = true }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
rustls-pemfile = "2"

[lints]
workspace = true
