[package]
name = "lr-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Request routing and rate limiting for LocalRouter"

[dependencies]
lr-types = { workspace = true }
lr-config = { workspace = true }
lr-providers = { workspace = true }
lr-monitoring = { workspace = true }
lr-routellm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
