[package]
name = "lr-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Utility functions for LocalRouter"

[dependencies]
lr-types = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
ring = { workspace = true }
